# Saba

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  ProjectOptions.cmake  README.md  premake5.lua
App/: CMakeLists.txt
App/assets/scenes/: basic.scene
App/assets/shaders/: basic.vert.hlsl
App/src/: CMakeLists.txt  ExampleLayer.cpp  ExampleLayer.h  main.cpp
Cmake/: ClangTidy.cmake  CompilerWarnings.cmake  CppCheck.cmake  PreventInSourceIntermediates.cmake
Editor/: CMakeLists.txt
Editor/assets/models/: box.fbx  sphere.fbx
Editor/assets/scenes/: Editor.saba
Editor/assets/shaders/: 3D.glsl  basic.shader  particle.glsl
Editor/src/: CMakeLists.txt  EditorLayer.cpp  EditorLayer.h  Main.cpp  Scripts.h  main.cpp
Editor/src/Panels/: HierarchyPanel.cpp  HierarchyPanel.h
Game/: imgui.ini
Game/assets/shaders/: 2D.glsl  basic3D.glsl  cubemapView.glsl  dirShadow.glsl  particle.glsl  pointShadow.glsl  postProcess.glsl  shaders.txt  spotShadow.glsl
Game/src/: ExampleLayer.cpp  ExampleLayer.h  Main.cpp
Saba/: CMakeLists.txt
Saba/assets/shaders/: particleBatched.glsl
Saba/src/: CMakeLists.txt  EntryPoint.h  Saba.h  pch.h
Saba/src/Platform/GLFW/: InputGLFW.cpp  InputGLFW.h  WindowGLFW.cpp  WindowGLFW.h
Saba/src/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLError.cpp  OpenGLError.h  OpenGLFramebuffer.cpp  OpenGLFramebuffer.h  OpenGLRenderbuffer.cpp  OpenGLRenderbuffer.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
Saba/src/Platform/Windows/: WindowsPlatformUtils.cpp
Saba/src/Saba/: Application.cpp  Application.h  Buffer.h  Core.cpp  Core.h  EntryPoint.h  Input.cpp  Input.h  KeyCodes.h  Layer.h  LayerStack.h  Log.cpp  Log.h  MouseCodes.h  Platform.h  Random.cpp  Random.h  Timer.h  Timestep.h  Window.cpp  Window.h
Saba/src/Saba/Core/: Application.cpp  Application.h  Buffer.h  Core.cpp  Core.h  Exception.h  Input.cpp  Input.h  KeyCodes.h  Keyboard.cpp  Keyboard.h  Layer.h  LayerStack.cpp  LayerStack.h  Log.h  Mouse.cpp  Mouse.h  MouseCodes.h  Platform.h  Ref.h  Timer.h  Timestep.h  UUID.cpp  UUID.h  Window.cpp  Window.h
Saba/src/Saba/Embed/: DefaultIcon.embed  WindowIcons.embed
Saba/src/Saba/Events/: ApplicationEvents.h  Event.h  KeyEvent.h  KeyEvents.h  MouseEvent.h  MouseEvents.h  WindowEvent.h
Saba/src/Saba/ImGui/: ImGui.cpp  ImGui.h  ImGuiLayer.cpp  ImGuiLayer.h  ImGuizmo.cpp  ImGuizmo.h  SabaImGui.cpp  SabaImGui.h
Saba/src/Saba/Layers/: Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h
Saba/src/Saba/Panels/: ContentBrowserPanel.cpp  ContentBrowserPanel.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h
Saba/src/Saba/Platform/DX11/: DX11Context.cpp  DX11Context.h  DX11GraphicsBuffer.cpp  DX11GraphicsBuffers.h  DX11InputLayout.cpp  DX11InputLayout.h  DX11RenderPass.cpp  DX11RenderPass.h  DX11RenderTarget.cpp  DX11RenderTarget.h  DX11RendererAPI.cpp  DX11RendererAPI.h  DX11Shader.cpp  DX11Shader.h  DX11Texture.cpp  DX11Texture.h  DXErr.cpp  DXErr.h  DXGIInfoManager.cpp  DXGIInfoManager.h  DXGetErrorDescription.inl  DXGetErrorString.inl
Saba/src/Saba/Platform/Linux/: LinuxWindow.cpp  LinuxWindow.h
Saba/src/Saba/Platform/OpenGL/: OpenGLContext.cpp  OpenGLContext.h  OpenGLGraphicsBuffer.cpp  OpenGLGraphicsBuffers.h  OpenGLInputLayout.cpp  OpenGLInputLayout.h  OpenGLRenderPass.cpp  OpenGLRenderPass.h  OpenGLRenderTarget.cpp  OpenGLRenderTarget.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h
Saba/src/Saba/Platform/Vulkan/: VulkanContext.cpp  VulkanContext.h  VulkanRenderPass.cpp  VulkanRenderPass.h  VulkanRenderTarget.cpp  VulkanRenderTarget.h  VulkanSwapChain.cpp  VulkanSwapChain.h
Saba/src/Saba/Platform/Windows/: WindowsUtils.cpp  WindowsWindow.cpp  WindowsWindow.h
Saba/src/Saba/Renderer/: AssetsManager.cpp  AssetsManager.h  Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  Framebuffer.cpp  Framebuffer.h  GraphicsBuffers.cpp  GraphicsBuffers.h  GraphicsContext.cpp  GraphicsContext.h  InputLayout.cpp  InputLayout.h  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  OrthographicCamera.cpp  OrthographicCamera.h  OrthographicCameraControler.cpp  OrthographicCameraControler.h  ParticleSystem.cpp  ParticleSystem.h  ParticleSystemBatched.cpp  ParticleSystemBatched.h  RenderCommand.cpp  RenderCommand.h  RenderCommandQueue.cpp  RenderCommandQueue.h  RenderPass.cpp  RenderPass.h  RenderTarget.cpp  RenderTarget.h  Renderbuffer.cpp  Renderbuffer.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  (+12 more)
Saba/src/Saba/Renderer/2D/: Renderer2D.cpp  Renderer2D.h
Saba/src/Saba/Renderer/3D/: Cube.cpp  Cube.h  DirectionalLight.cpp  Light.h  Quad.cpp  Quad.h  Renderer3D.cpp  Renderer3D.h  Scene3D.cpp  Scene3D.h  Scene3DObject.h  Sphere.cpp  Sphere.h
Saba/src/Saba/Renderer/3D/Lights/: DirectionalLight.cpp  DirectionalLight.h  Light.h  PointLight.cpp  PointLight.h  SpotLight.cpp  SpotLight.h
Saba/src/Saba/Renderer/Camera/: OrthographicCamera.cpp  OrthographicCamera.h  OrthographicCameraControler.cpp  OrthographicCameraControler.h
Saba/src/Saba/Renderer/Cameras/: OrthographicCamera.h  OrthographicCameraControler.h  PerspectiveCamera.cpp  PerspectiveCamera.h  PerspectiveCameraControler.cpp  PerspectiveCameraControler.h
Saba/src/Saba/Scene/: Components.h  EditorCamera.cpp  EditorCamera.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h  SceneCamera.cpp  SceneCamera.h  SceneSerializer.cpp  SceneSerializer.h  ScriptableEntity.h
Saba/src/Saba/Utils/: AssetsManager.cpp  AssetsManager.h  FileProcessing.cpp  FileProcessing.h  Math.cpp  Math.h  PlatformUtils.h  TextFile.cpp  TextFile.h  TextFileReader.cpp  TextFileReader.h  TextReader.cpp  TextReader.h
Scripts/: Linux-Compile.sh  Linux-GenProjects.sh
