file(GLOB_RECURSE SabaSrc "*.cpp" "*.h")
message(STATUS "Files added by GLOB:")
foreach(file ${SabaSrc})
    message(STATUS "${file}")
endforeach()

add_library(Saba SHARED ${SabaSrc})
target_include_directories(Saba PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
target_compile_definitions(Saba PRIVATE SB_BUILD_DLL GLFW_INCLUDE_NONE)
target_link_libraries(Saba PRIVATE SabaOptions SabaWarnings glfw glad)
