file(GLOB_RECURSE SabaSrc "*.cpp" "*.h")

if (WIN32)
    list(FILTER SabaSrc EXCLUDE REGEX ".*Saba/Platform/Linux.*")
elseif(UNIX)
    list(FILTER SabaSrc EXCLUDE REGEX ".*Saba/Platform/Windows.*")
    list(FILTER SabaSrc EXCLUDE REGEX ".*Saba/Platform/DX11.*")
endif()

message(STATUS "Files added by GLOB:")
foreach(file ${SabaSrc})
    message(STATUS "${file}")
endforeach()

add_library(Saba SHARED ${SabaSrc})
target_include_directories(Saba PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
target_compile_definitions(Saba PRIVATE SB_BUILD_DLL GLFW_INCLUDE_NONE)
target_link_libraries(Saba PRIVATE SabaOptions SabaWarnings glfw glad)
if (WIN32)
    target_link_libraries(Saba PRIVATE d3d11 D3DCompiler dxguid)
elseif(UNIX)
    target_link_libraries(Saba PRIVATE glfw)
endif()
